[package]
name = "treemap_md"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.22.0"
eframe = "0.22.0"
walkdir = "2.3.3"
tokio = { version = "1.28.0", features = ["full"] }
rayon = "1.7.0"
rfd = "0.11.0"
parking_lot = "0.12.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }